--- a/src/sass/components/text-and-image.sass
+++ b/src/sass/components/text-and-image.sass
@@ -6,16 +6,20 @@
     @extend .u-clearfix
     border-bottom: .2rem solid $color-dark
 
-  &__image
-    @extend .u-wireframe-image
+  &__image-container
     float: right
     margin-left: $main-mobile-spacing
-    object-fit: cover
     width: 15rem
 
     @include bp('portrait')
       width: 50rem
       height: 25rem
+
+  &__image
+    @extend .u-wireframe-image
+    object-fit: cover
+    height: 100%
+    width: 100%
 
   &__title
     @extend .common-header
