icons on search map are now clickable; clicking lists the jobs at that location; job summaries currently show travel times;

--- a/src/sass/components/job-summary.sass
+++ b/src/sass/components/job-summary.sass
@@ -8,6 +8,12 @@
   &__distance
     font-weight: $font-weight-bold
 
+    &-miles
+      content: ' miles'
+
+    &-time
+      color: #cccccc
+
   &__position
     font-weight: $font-weight-bold
 
