--- a/src/sass/components/text-block.sass
+++ b/src/sass/components/text-block.sass
@@ -26,7 +26,7 @@
 
 
     p
-      margin-bottom: $main-mobile-spacing/2
+      margin-bottom: $main-mobile-spacing
 
   &__link
     border: .2rem solid $color-dark
