significant changes to get new content for home page to work with design

--- a/src/sass/components/accordion.sass
+++ b/src/sass/components/accordion.sass
@@ -1,6 +1,6 @@
 .accordion
   font-size: $font-size-small
-  margin: $main-mobile-spacing
+  margin: 0 $main-mobile-spacing
 
   &__title
     @extend .common-header
@@ -33,17 +33,6 @@
 
         &:first-child
           margin-top: 0
-
-      & .medium
-        font-size: $font-size-medium
-
-      & .large
-        font-size: $font-size-large
-
-      & .enormous
-        color: $color-main
-        font-size: $font-size-enormous
-        font-weight: $font-weight-bold
 
     &-button
       cursor: pointer
