--- a/src/sass/components/call-to-action.sass
+++ b/src/sass/components/call-to-action.sass
@@ -1,6 +1,6 @@
 .call-to-action
   background: $color-main
-  margin-bottom: $main-mobile-spacing
+  //margin-bottom: $main-mobile-spacing
   padding: $main-mobile-spacing
 
   @include bp('portrait')
@@ -39,6 +39,7 @@
 
   &--tight
     background-color: $color-white
+    padding: 0 $main-mobile-spacing
 
     .call-to-action
 
