--- a/src/sass/layout.sass
+++ b/src/sass/layout.sass
@@ -1,8 +1,10 @@
 .l-full
   @extend .u-clearfix
+  margin: $main-mobile-spacing 0
   width: 100%
 
 .l-half
+  margin: $main-mobile-spacing 0
   width: 100%
 
   @include bp('portrait')
