--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -44,6 +44,19 @@ strong
 img
   display: block
 
+// globals
+.medium
+  font-size: $font-size-medium
+
+.large
+  font-size: $font-size-large
+
+.enormous
+  color: $color-main
+  font-size: $font-size-enormous
+  font-weight: $font-weight-bold
+  line-height: 1.2
+
 // utilities
 @import 'utilities/_common-header.sass'
 @import 'utilities/_common-table.sass'
