added self hosted font

--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -2,7 +2,7 @@
    background-image: url('/img/#{$path}')
 
 // fonts
-$sans-serif:  "Source Sans Pro", Helvetica, Verdana, sans-serif
+$sans-serif:  "GDSTransportWebsite", Helvetica, Verdana, sans-serif
 $serif: Merriweather, Georgia, 'Times New Roman', serif
 $mono: 'Source Code Pro', Courier, mono
 
