--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -3,46 +3,54 @@
 // include reset
 @import '../css/reset.css'
 
+@import 'font-faces'
 @import 'variables'
 @import 'breakpoints'
 @import 'layout'
 
 // base reset
-*:focus
-  outline: none
+button
+  background: none
+
+html
+  background-color: $color-white
+
+button
+  border: none
 
 *
   box-sizing: border-box
 
-a
+a,
+html
   color: $color-dark
-  cursor: pointer
-  text-decoration: none
 
-p a
-  text-decoration: underline
+a,
+button
+  cursor: pointer
+
+img
+  display: block
+
+html
+  font-family: $sans-serif
 
 html
   font-size: 62.5%
-  color: $color-dark
-  background-color: $color-white
-  font-family: $sans-serif
+
+html
   opacity: 0
+
+*:focus
+  outline: none
 
 body
   font-size: $font-size-medium
   -webkit-text-size-adjust: none
 
-button
-  border: none
-  background: none
-  cursor: pointer
-
 strong
   font-weight: $font-weight-bold
 
-img
-  display: block
 
 // globals
 .medium
@@ -56,6 +64,12 @@ img
   font-size: $font-size-enormous
   font-weight: $font-weight-bold
   line-height: 1.2
+
+a
+  text-decoration: none
+
+p a
+  text-decoration: underline
 
 // utilities
 @import 'utilities/_common-header.sass'
