--- a/src/sass/utilities/_top-border.sass
+++ b/src/sass/utilities/_top-border.sass
@@ -1,25 +1,29 @@
 .u-top-border
-  padding-top: 1rem
+  padding-top: $main-mobile-spacing
   position: relative
 
   &:before
-    border-top: .3rem solid $color-dark
-    top: -.2rem
+    border-top-color: inherit
+    border-top-style: solid
+    border-top-width: .4rem
     content: ''
+    left: 0
     height: .2rem
     position: absolute
+    top: -.2rem
     width: 4rem
-    left: 0
 
 .u-top-border-small
   padding-top: .5rem
   position: relative
 
   &:before
-    border-top: .2rem solid $color-dark
-    top: -.2rem
+    border-top-color: inherit
+    border-top-style: solid
+    border-top-width: .2rem
     content: ''
     height: .2rem
-    position: absolute
-    width: 3rem
     left: 0
+    position: absolute
+    top: -.2rem
+    width: 2.4rem
