--- a/src/sass/components/text-block.sass
+++ b/src/sass/components/text-block.sass
@@ -8,18 +8,17 @@
   &__subtitle
     font-weight: $font-weight-bold
     font-size: $font-size-small
-    margin-bottom: $main-mobile-spacing/2
 
   &__content
 
     & > h4
       font-weight: $font-weight-bold
       font-size: $font-size-small
-      margin: $main-mobile-spacing/2 0
+      margin: $main-mobile-spacing 0 $main-mobile-spacing/2 0
 
     & li
       margin: $main-mobile-spacing/2 0
-      margin-left: $main-mobile-spacing/2
+      margin-left: $main-mobile-spacing
 
     & ol li
       list-style-type: decimal
