--- a/src/sass/utilities/_top-border.sass
+++ b/src/sass/utilities/_top-border.sass
@@ -1,5 +1,5 @@
 .u-top-border
-  padding-top: $main-mobile-spacing
+  padding-top: $main-mobile-spacing * 3/4
   position: relative
 
   &:before
@@ -14,7 +14,7 @@
     width: 4rem
 
 .u-top-border-small
-  padding-top: .5rem
+  padding-top: .8rem
   position: relative
 
   &:before
