--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -3,6 +3,7 @@
 
 // fonts
 $sans-serif:  "GDSTransportWebsite", Helvetica, Verdana, sans-serif
+$sans-serif-strong:  "GDSTransportWebsite-Bold", Helvetica, Verdana, sans-serif
 $serif: Merriweather, Georgia, 'Times New Roman', serif
 $mono: 'Source Code Pro', Courier, mono
 
@@ -15,7 +16,7 @@ $font-size-tiny: 1.1rem
 $font-size-small: 1.2rem
 $font-size-medium: 1.6rem
 $font-size-large: 1.8rem
-$font-size-huge: 2rem
+$font-size-huge: 2.4rem
 $font-size-enormous: 4.8rem
 
 // colors
