--- a/src/sass/components/accordion.sass
+++ b/src/sass/components/accordion.sass
@@ -18,7 +18,9 @@
     &-title
       border-bottom: 1px solid #cccccc
       font-weight: $font-weight-bold
+      margin-bottom: 0
       padding: $main-mobile-spacing/2 0
+
 
     &-content
       border-left: 2px solid $color-light
