--- a/src/sass/components/tabs.sass
+++ b/src/sass/components/tabs.sass
@@ -10,7 +10,7 @@
       background-color: $color-dark
       color: $color-white
       cursor: pointer
-      padding: $main-mobile-spacing/2
+      padding: $main-mobile-spacing*3/4 $main-mobile-spacing*7/8 $main-mobile-spacing/2 $main-mobile-spacing*3/4
 
       &--active
         background-color: $color-main
@@ -18,7 +18,7 @@
   &__tab
     & p
       font-size: $font-size-tiny
-      margin: $main-mobile-spacing/2 $main-mobile-spacing*2 $main-mobile-spacing/2 0
+      margin: .4em 1em 1em 0
 
     & table
       font-size: $font-size-tiny
