--- a/src/sass/utilities/_common-header.sass
+++ b/src/sass/utilities/_common-header.sass
@@ -2,10 +2,15 @@
   @extend .u-top-border
   font-size: $font-size-medium
   font-weight: $font-weight-bold
-  margin-bottom: $main-mobile-spacing/2
+  margin-bottom: .5em
 
 .common-header-small
   @extend .u-top-border-small
   font-size: $font-size-small
   font-weight: $font-weight-bold
-  margin: $main-mobile-spacing/2 0
+  margin: .4em 0
+
+.common-header-tiny
+  font-size: $font-size-tiny
+  font-weight: $font-weight-bold
+  margin: .4em 0
