created HMP Pentonville mock up

--- a/src/sass/components/text-and-image.sass
+++ b/src/sass/components/text-and-image.sass
@@ -33,6 +33,10 @@
     height: 100%
     width: 100%
 
+  &__map
+    height: 100%
+    width: 100%
+
   &__title
     @extend .common-header
     clear: left
