job summary position now bold

--- a/src/sass/components/job-summary.sass
+++ b/src/sass/components/job-summary.sass
@@ -15,15 +15,13 @@
       color: #cccccc
 
   &__position
-    font-weight: $font-weight-bold
+    font-family: $sans-serif-strong
 
   &__salary
     font-weight: $font-weight-bold
     position: absolute
     right: 0
     top: $main-mobile-spacing/2
-
-  //&-prison
 
   &__link
     bottom: $main-mobile-spacing/2
