changed header background

--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -4,7 +4,7 @@
   position: relative
 
   &__img-container
-    @include background-img('alcatraz_prison_block_cc_img.jpg')
+    @include background-img('header.jpg')
     background-color: $color-dark
     background-position: center center
     background-size: cover
