--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -79,9 +79,10 @@ html
 
 .enormous
   color: $color-main
+  font-family: $sans-serif-strong
   font-size: $font-size-enormous
-  font-weight: $font-weight-bold
-  line-height: 1.2
+  line-height: 1
+  padding-top: .1em
 
 a
   text-decoration: none
