styled call to action, header and search

--- a/src/sass/components/call-to-action.sass
+++ b/src/sass/components/call-to-action.sass
@@ -1,6 +1,5 @@
 .call-to-action
   background: $color-main
-  //margin-bottom: $main-mobile-spacing
   padding: $main-mobile-spacing
 
   @include bp('portrait')
@@ -31,6 +30,7 @@
       color: $color-white
       cursor: pointer
       display: block
+      font-family: $sans-serif-strong
       padding: $main-mobile-spacing/2 $main-mobile-spacing
 
       &[href='']
