added prison search page

--- a/src/sass/components/tabs.sass
+++ b/src/sass/components/tabs.sass
@@ -10,7 +10,14 @@
       background-color: $color-dark
       color: $color-white
       cursor: pointer
+      flex: 1 1 auto
+      font-family: $sans-serif-strong
+      margin-left: 1rem
       padding: $main-mobile-spacing*3/4 $main-mobile-spacing*7/8 $main-mobile-spacing/2 $main-mobile-spacing*3/4
+      text-align: center
+
+      &:first-child
+        margin-left: 0
 
       &--active
         background-color: $color-main
