created organization summary component

--- a/src/sass/components/accordion.sass
+++ b/src/sass/components/accordion.sass
@@ -36,6 +36,9 @@
         &:first-child
           margin-top: 0
 
+      & > a
+        text-decoration: underline
+
     &-button
       cursor: pointer
       display: block
