--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -109,6 +109,7 @@ p a
 @import 'components/header'
 @import 'components/job-summary'
 @import 'components/ordered-list'
+@import 'components/organization-summary'
 @import 'components/quote'
 @import 'components/role-intro'
 @import 'components/search'
