--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -55,6 +55,11 @@ h1,h2,h3,h4,h5,h6,
 strong
   font-weight: $font-weight-bold
 
+*
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+  -moz-tap-highlight-color: rgba(0, 0, 0, 0)
+
+
 h1,h2,h3,h4,h5,h6,
 p
   margin: 0 0 .65em 0
