styled the light header

--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -160,12 +160,13 @@
         z-index: 1
 
   &--style-light
+    height: auto
 
     .header
-      background-color: $color-white
 
       &__logo
         @include background-img('hmpps-logo.png')
+        margin-bottom: 0
 
       &__text
         color: $color-dark
