--- a/src/sass/components/call-to-action.sass
+++ b/src/sass/components/call-to-action.sass
@@ -13,6 +13,7 @@
   &__list-element
     background: $color-main
     border: 1px solid $color-white
+    border-radius: 1em
     color: $color-white
     font-size: $font-size-large
     margin-top: 1rem
@@ -47,7 +48,7 @@
         $size: .2rem
         background-color: $color-white
         border: $size solid $color-dark
-        margin-top: 0
+        margin: $main-mobile-spacing/2 0
         position: relative
         top: -$size
 
