all images have object-fit: cover applied

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -64,6 +64,9 @@ h1,h2,h3,h4,h5,h6,
 p
   margin: 0 0 .65em 0
 
+img
+  object-fit: cover
+  
 // TODO use this instead :
 // http://vuetips.com/v-cloak-directive-hides-html-on-startup
 html
