--- a/src/sass/components/call-to-action.sass
+++ b/src/sass/components/call-to-action.sass
@@ -15,7 +15,7 @@
     border: 1px solid $color-white
     border-radius: 20em
     color: $color-white
-    font-size: $font-size-large
+    font-size: $font-size-medium
     margin-top: 1rem
     text-align: center
     text-transform: uppercase
@@ -34,7 +34,7 @@
       display: block
       font-family: $sans-serif-strong
       line-height: 2.2rem
-      padding: $main-mobile-spacing
+      padding: 1rem 2rem
       position: relative
       top: .2rem
       vertical-align: text-bottom
