--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -130,6 +130,7 @@
     background-repeat: no-repeat
     background-position: center center
     background-size: contain
+    display: block
     height: $main-mobile-spacing * 2
     margin-bottom: $main-mobile-spacing * 1.5
     margin-left: -1.7rem // TODO fix image
