--- a/src/sass/components/video-player.sass
+++ b/src/sass/components/video-player.sass
@@ -4,7 +4,7 @@
   height: 15rem
   justify-content: center
   align-items: center
-  margin: 0 $main-mobile-spacing
+  margin: $main-mobile-spacing 0
 
   &__play-button
     &:before
