--- a/src/sass/components/ordered-list.sass
+++ b/src/sass/components/ordered-list.sass
@@ -29,13 +29,13 @@
       content: counter(li)
       counter-increment: li
       display: flex
-      font-size: $font-size-large
+      font-size: $font-size-medium
       font-weight: $font-weight-bold
       height: 3rem
       justify-content: center
       left: -3.1rem
       line-height: 2.49rem
-      padding: .1rem .1rem 0 0
+      padding: .3rem .1rem 0 0
       position: absolute
       width: 3rem
 
