--- a/src/sass/components/accordion.sass
+++ b/src/sass/components/accordion.sass
@@ -1,4 +1,5 @@
 .accordion
+  $c: &
   font-size: $font-size-small
   margin: 0 $main-mobile-spacing
 
@@ -15,10 +16,14 @@
     &:first-child
       border-top: 1px solid $color-light
 
-    &-title
+    &-header
       border-bottom: 1px solid #cccccc
       margin-bottom: 0
       padding: $main-mobile-spacing/2 0
+
+    &-title
+      display: list-item
+      margin-bottom: 0
 
     &-subtitle
       font-family: $sans-serif
@@ -30,7 +35,7 @@
       height: 0
       overflow: hidden
       padding: 0 1rem
-      transition: height $main-transition-duration
+      transition: all $main-transition-duration
 
       & > p
         margin-top: $main-mobile-spacing/2
@@ -45,32 +50,19 @@
         text-decoration: underline
 
     &-button
+      //color: $color-main // https://stackoverflow.com/questions/32413731/color-for-unicode-emoji/39776303#39776303
+      color: transparent
       cursor: pointer
       display: block
       float: right
-      margin-top: 1.3rem
-
-      & > div
-        background-color: $color-main
-        height: .2rem
-        opacity: 1
-        width: 1rem
-        transition: opacity $main-transition-duration
-
-        &:first-child
-          transform: rotate(90deg)
-
-        &:last-child
-          transform: translateY(-.2rem)
-
-    //&-button:before // TODO change to image
-    //  color: $color-main
-    //  content: '+'
-    //  display: block
-    //  font-size: 2rem
-    //  font-weight: $font-weight-bold
-    //  height: 1rem
-    //  width: 1rem
+      font-size: $font-size-small
+      margin-top: .2rem
+      padding: 0
+      position: relative
+      text-shadow: 0 0 0 $color-main
+      top: .2rem
+      transform: rotate(0deg)
+      transition: all $main-transition-duration
 
     &--open
       .accordion
@@ -78,13 +70,23 @@
           &-content
             height: initial
             margin-top: $main-mobile-spacing/2
-            transition: all $main-transition-duration
 
           &-button
-            //transform: rotate(90deg)
-            //transition: all $main-transition-duration
+            transform: rotate(90deg)
 
           &-button
             & > div
               &:first-child
                 opacity: 0
+
+  &--numbered
+    .accordion
+      &__list-element
+        display: block
+
+      &__list-element-title
+        //background: red
+        display: list-item
+        list-style-type: decimal
+        margin-left: $main-mobile-spacing
+
