--- a/src/sass/components/text-block.sass
+++ b/src/sass/components/text-block.sass
@@ -17,6 +17,7 @@
       margin: $main-mobile-spacing 0 $main-mobile-spacing/2 0
 
     & li
+      font-size: $font-size-small
       margin: $main-mobile-spacing/2 0
       margin-left: $main-mobile-spacing
 
