increased right margin on text-block p

--- a/src/sass/components/text-block.sass
+++ b/src/sass/components/text-block.sass
@@ -30,6 +30,7 @@
 
     p
       margin-bottom: $main-mobile-spacing/2
+      margin-right: $main-mobile-spacing/2
 
     p:last-of-type
       margin-bottom: 0
