--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -1,35 +1,63 @@
 .header
   height: 24rem
-  padding: $main-mobile-spacing
   position: relative
+
+  &__overlay
+    padding: $main-mobile-spacing
+    position: absolute
+    top: 0
+    width: 100%
 
   &__img-container
     background-color: $color-dark
     background-position: center center
     background-size: cover
-    bottom: 0
-    left: 0
-    position: absolute
-    right: 0
-    top: 0
-
-  &__carousel-image
     height: 100%
-    left: 0
-    opacity: 0
-    position: absolute
-    top: 0
     width: 100%
-    transition: opacity $main-transition-duration
-    transition-delay: $main-transition-duration
-    z-index: -1
 
-    &--active
-      opacity: 1
-      transition: opacity $main-transition-duration
-      transition-delay: 0s
-      z-index: 0
+    .slick-slider
+      height: 100%
+      margin-bottom: 0
 
+    .slick-list
+      height: 100%
+
+    .slick-track
+      height: 100%
+
+    .slick-slide
+      & > div
+        height: 100%
+        & > img
+          height: 100%
+          width: 100%
+
+    .slick-dots
+      bottom: 25px
+      display: flex
+      justify-content: center
+      position: absolute
+      width: 100%
+
+      & > li
+        margin: $main-mobile-spacing/2
+
+        &.slick-active > button
+          background: $color-light
+
+      button
+        $size: 1rem
+        border: $size/5 solid $color-light
+        border-radius: $size*4
+        color: $color-transparent // rgba(0,0,0,0)
+        display: block
+        height: $size
+        padding: 0
+        width: $size
+        transition: all .2s
+
+        &:before
+          display: none
 
   &__carousel-controls-container
     position: absolute
@@ -134,9 +162,8 @@
     height: $main-mobile-spacing * 2
     margin-bottom: $main-mobile-spacing * 1.5
     margin-left: -1.7rem // TODO fix image
-    position: relative
     width: 10rem
-    z-index: 1
+    //z-index: 1
 
   &__text
     @extend .u-top-border
