--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -100,6 +100,8 @@ a
 p a
   text-decoration: underline
 
+@import '../../node_modules/slick-carousel/slick/slick.css'
+
 // utilities
 @import 'utilities/_common-header.sass'
 @import 'utilities/_common-table.sass'
