made ordered-list title font bold

--- a/src/sass/components/ordered-list.sass
+++ b/src/sass/components/ordered-list.sass
@@ -53,5 +53,6 @@
       display: none
 
   &__list-element-main-text
-    font-weight: bold
+    font-family: $sans-serif-strong
+    font-size: $font-size-tiny
     padding-top: .8rem
