fixed job post header

--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -196,6 +196,9 @@
         @include background-img('hmpps-logo.png')
         margin-bottom: 0
 
+      &__overlay
+        position: initial
+
       &__text
         color: $color-dark
 
