--- a/src/sass/components/text-and-image.sass
+++ b/src/sass/components/text-and-image.sass
@@ -19,8 +19,8 @@
     width: 50%
 
   &__image-container
-    align-self: flex-end
-    bottom: .2rem
+    align-self: flex-start
+    //bottom: .2rem
     width: 50%
 
     @include bp('portrait')
