modified files to fit new dir structure

--- a/web/app/themes/ppj/src/sass/font-faces.sass
+++ b/web/app/themes/ppj/src/sass/font-faces.sass
@@ -1,7 +1,8 @@
+$dir: '/app/themes/PPJ/dest/fonts/'
 @font-face
   font-family: 'GDSTransportWebsite'
   //src: url('GDSTransportWebsite.eot') /* IE9 Compat Modes */
-  src: url('/fonts/GDSTransportWebsite.ttf') format('truetype') /* Safari, Android, iOS */
+  src: url("#{$dir}GDSTransportWebsite.ttf") format('truetype') /* Safari, Android, iOS */
        //url('GDSTransportWebsite.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        //url('GDSTransportWebsite.woff2') format('woff2'), /* Super Modern Browsers */
        //url('GDSTransportWebsite.woff') format('woff'), /* Pretty Modern Browsers */
@@ -10,7 +11,7 @@
 @font-face
   font-family: 'GDSTransportWebsite-Bold'
   //src: url('GDSTransportWebsite.eot') /* IE9 Compat Modes */
-  src: url('/fonts/GDSTransportWebsite-Bold.ttf') format('truetype') /* Safari, Android, iOS */
+  src: url("#{$dir}GDSTransportWebsite-Bold.ttf") format('truetype') /* Safari, Android, iOS */
   //url('GDSTransportWebsite.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
   //url('GDSTransportWebsite.woff2') format('woff2'), /* Super Modern Browsers */
   //url('GDSTransportWebsite.woff') format('woff'), /* Pretty Modern Browsers */
