--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -1,5 +1,5 @@
 @mixin background-img($path)
-   background-image: url('/img/#{$path}')
+   background-image: url('/app/themes/PPJ/dest/img/#{$path}')
 
 // fonts
 $sans-serif:  "GDSTransportWebsite", Helvetica, Verdana, sans-serif
