header carousel now get's data from acf

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -1,6 +1,5 @@
 .header
   height: 24rem
-  position: relative
 
   &__overlay
     padding: $main-mobile-spacing
@@ -180,7 +179,7 @@
     .header
       &__nav-menu
         display: initial
-        position: fixed
+        position: absolute
         top: 0
         bottom: 0
         left: 0
