--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -116,6 +116,7 @@ p a
 // -- COMPONENTS ------------------------------------------
 
 .page-container
+  position: relative
   width: 100%
 
 @import 'components/accordion'
