stopped header overlay blocking clickable elements

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -3,6 +3,7 @@
 
   &__overlay
     padding: $main-mobile-spacing
+    pointer-events: none
     position: absolute
     top: 0
     width: 100%
@@ -87,6 +88,7 @@
   // https://www.w3schools.com/howto/howto_css_menu_icon.asp
   &__nav-link
     cursor: pointer
+    pointer-events: auto
     position: absolute
     right: $main-mobile-spacing
     top: $main-mobile-spacing
@@ -161,6 +163,7 @@
     height: $main-mobile-spacing * 2
     margin-bottom: $main-mobile-spacing * 1.5
     margin-left: -1.7rem // TODO fix image
+    pointer-events: auto
     width: 10rem
     //z-index: 1
 
