page container now has a height of 100vh

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -116,6 +116,7 @@ p a
 // -- COMPONENTS ------------------------------------------
 
 .page-container
+  min-height: 100vh
   position: relative
   width: 100%
 
