carousel not activated if there is only one header image

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -8,6 +8,10 @@
     top: 0
     width: 100%
 
+  &__carousel-image
+    height: 100%
+    width: 100%
+
   &__img-container
     background-color: $color-dark
     background-position: center center
@@ -29,8 +33,6 @@
       & > div
         height: 100%
         & > img
-          height: 100%
-          width: 100%
 
     .slick-dots
       bottom: 25px
