changed color of top borders

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -170,7 +170,7 @@
     //z-index: 1
 
   &__text
-    @extend .u-top-border
+    @include u-top-border('large', 'light')
     color: $color-white
     font-family: $sans-serif-strong
     font-size: $font-size-huge
