--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -91,7 +91,7 @@ a[href=""]
   font-size: $font-size-large
 
 .enormous
-  color: $color-main
+  color: $color-secondary
   font-family: $sans-serif-strong
   font-size: $font-size-enormous
   line-height: 1
@@ -106,11 +106,11 @@ p a
 @import '../../node_modules/slick-carousel/slick/slick.css'
 
 // utilities
+@import 'utilities/_top-border.sass'
 @import 'utilities/_common-header.sass'
 @import 'utilities/_common-table.sass'
 @import 'utilities/_clearfix.sass'
 @import 'utilities/_margin.sass'
-@import 'utilities/_top-border.sass'
 @import 'utilities/_wire-frame.sass'
 
 // -- COMPONENTS ------------------------------------------
