--- a/web/app/themes/ppj/src/sass/utilities/_common-header.sass
+++ b/web/app/themes/ppj/src/sass/utilities/_common-header.sass
@@ -1,11 +1,11 @@
 .common-header
-  @extend .u-top-border
+  @include u-top-border('large', 'dark')
   font-size: $font-size-medium
   font-weight: $font-weight-bold
   margin-bottom: .5em
 
 .common-header-small
-  @extend .u-top-border-small
+  @include u-top-border('small', 'dark')
   font-size: $font-size-small
   font-weight: $font-weight-bold
   margin: .4em 0
