--- a/web/app/themes/ppj/src/sass/variables.sass
+++ b/web/app/themes/ppj/src/sass/variables.sass
@@ -20,8 +20,9 @@ $font-size-huge: 2.4rem
 $font-size-enormous: 4.8rem
 
 // colors
-//$color-main: rgb(101,101,101)
-$color-main: rgb(0,133,132)
+$color-main: rgb(0,90,120)
+$color-secondary: rgb(20,152,197)
+$color-very-light: rgb(229,229,232)
 $color-light: rgb(204,204,204)
 $color-medium: rgb(240,240,240)
 $color-dark: rgb(0,0,0)
