--- a/web/app/themes/ppj/src/sass/components/video-player.sass
+++ b/web/app/themes/ppj/src/sass/components/video-player.sass
@@ -1,10 +1,24 @@
 .video-player
-  background: $color-dark
-  display: flex
-  height: 15rem
-  justify-content: center
   align-items: center
-  margin: $main-mobile-spacing 0
+  background: $color-dark
+  bottom: 0
+  display: flex
+  height: 100%
+  left: 0
+  right: 0
+  justify-content: center
+  position: absolute
+  top: 0
+
+  & > *
+    height: 100%
+    width: 100%
+
+  &__container
+    height: 0
+    margin: $main-mobile-spacing 0
+    padding-bottom: 56.25%
+    position: relative
 
   &__play-button
     &:before
