added footer nav links

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -123,6 +123,7 @@ p a
 @import 'components/accordion'
 @import 'components/call-to-action'
 @import 'components/contact'
+@import 'components/footer'
 @import 'components/header'
 @import 'components/job-summary'
 @import 'components/ordered-list'
