--- a/web/app/themes/ppj/src/sass/components/accordion.sass
+++ b/web/app/themes/ppj/src/sass/components/accordion.sass
@@ -60,7 +60,7 @@
       padding: 0
       position: relative
       text-shadow: 0 0 0 $color-main
-      top: .5rem
+      //top: .2rem
       transform: rotate(0deg)
       transition: all $main-transition-duration
 
