changed header nav link from hamburger to 'MENU'

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -91,6 +91,7 @@
   // https://jonsuh.com/hamburgers/
   // https://www.w3schools.com/howto/howto_css_menu_icon.asp
   &__nav-link
+    color: $color-white
     cursor: pointer
     pointer-events: auto
     position: absolute
@@ -195,6 +196,7 @@
 
   &--style-light
     height: auto
+    border: none
 
     .header
 
@@ -209,6 +211,7 @@
         color: $color-dark
 
       &__nav-link
+        color: $color-dark
 
         & > div
           background: $color-dark
