changed styling of text block content

--- a/web/app/themes/ppj/src/sass/main.sass
+++ b/web/app/themes/ppj/src/sass/main.sass
@@ -15,7 +15,8 @@ button
 html
   background-color: $color-white
 
-button
+button,
+hr
   border: none
 
 *
@@ -102,6 +103,11 @@ a
 
 p a
   text-decoration: underline
+
+hr
+  border-top: .1rem solid $color-light
+  margin: $main-mobile-spacing 0
+
 
 @import '../../node_modules/slick-carousel/slick/slick.css'
 
