--- a/web/app/themes/ppj/src/sass/components/text-block.sass
+++ b/web/app/themes/ppj/src/sass/components/text-block.sass
@@ -19,6 +19,7 @@
       font-size: $font-size-small
       margin: $main-mobile-spacing/2 0
       margin-left: $main-mobile-spacing
+      padding-right: $main-mobile-spacing * 2
 
     & ol li
       list-style-type: decimal
@@ -29,7 +30,8 @@
 
     p
       margin-bottom: $main-mobile-spacing/2
-      margin-right: $main-mobile-spacing/2
+      //margin-right: $main-mobile-spacing/2
+      padding-right: $main-mobile-spacing
 
     p:last-of-type
       margin-bottom: 0
@@ -37,11 +39,18 @@
     a
       text-decoration: underline
 
+    hr
+      margin-right: $main-mobile-spacing * 2
+
   @at-root a#{&}__link // https://stackoverflow.com/questions/17268051/sass-combining-parent-using-ampersand-with-base-element
-    border: .2rem solid $color-dark
+    background-color: $color-main
+    //border: .2rem solid $color-dark
+    border-radius: $main-mobile-spacing * 2
+    color: $color-white
     display: block
     font-weight: bold
     margin: $main-mobile-spacing/2 0
-    padding: $main-mobile-spacing/2
+    padding: $main-mobile-spacing *.8
     text-align: center
     text-decoration: none
+    //text-transform: uppercase
