--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -3,7 +3,13 @@
   box-sizing: content-box
   height: 24rem
 
+  &__hero
+    height: 100%
+    position: relative
+    background: green
+
   &__overlay
+    height: 100%
     padding: $main-mobile-spacing
     pointer-events: none
     position: absolute
@@ -172,16 +178,27 @@
     width: 10rem
     //z-index: 1
 
+  &__text-container
+    padding: $main-mobile-spacing * 2 $main-mobile-spacing
+    position: absolute
+    left: 0
+    bottom: 0
+
   &__text
     @include u-top-border('large', 'light')
     color: $color-white
     font-family: $sans-serif-strong
     font-size: $font-size-huge
     font-weight: bold
-    line-height: 2.8rem
+    line-height: 1.3em
 
     @include bp('portrait')
       width: 24rem
+
+  &__subtext
+    color: $color-white
+    font-size: $font-size-large
+    margin-top: .5em
 
   &--nav-menu-open
     .header
